// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutComponents should match a snapshot for AppNavContainer 1`] = `
<div
  className="app-nav-container "
  data-test=""
>
  <Component
    text="AppNavContainer"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Content 1`] = `
<div
  className="content "
  data-test=""
>
  <Component
    text="Content"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for FlexContainerBasic 1`] = `
<div
  className=" container-flex      "
>
  <Component
    text="FlexContainerBasic"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for FlexContainerResponsive 1`] = `
<div
  className="container      "
>
  <Component
    text="FlexContainerResponsive"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Grid 1`] = `
<div
  className="columns  "
  data-test=""
>
  <Component
    text="Grid"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridFourCol 1`] = `
<div
  className="columns is-multiline "
  data-test=""
>
  <Component
    text="GridFourCol"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridFourColItem 1`] = `
<div
  className="column is-multiline is-half-tablet is-one-third-widescreen is-one-quarter-fullhd "
  data-test=""
>
  <Component
    text="GridFourColItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridItem 1`] = `
<div
  className="column  "
  data-test=""
>
  <Component
    text="GridItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridThreeColItem 1`] = `
<div
  className="column is-multiline is-half-tablet is-one-third-widescreen "
  data-test=""
>
  <Component
    text="GridThreeColItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Level 1`] = `
<div
  className="level "
  data-test=""
>
  <Component
    text="Level"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelItem 1`] = `
<div
  className="level-item "
  data-test=""
>
  <Component
    text="LevelItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelLeft 1`] = `
<div
  className="level-left "
  data-test=""
>
  <Component
    text="LevelLeft"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelRight 1`] = `
<div
  className="level-right "
  data-test=""
>
  <Component
    text="LevelRight"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Section 1`] = `
<div
  className="section "
  data-test=""
>
  <Component
    text="Section"
  />
</div>
`;
